--- a/src/Fiap.Application/Fiap.Application.csproj
+++ b/src/Fiap.Application/Fiap.Application.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Fiap.Domain\Fiap.Domain.csproj" />
   </ItemGroup>
 
 </Project>
