--- a/src/Fiap.Application/Fiap.Application.csproj
+++ b/src/Fiap.Application/Fiap.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Fiap.Data\Fiap.Data.csproj" />
     <ProjectReference Include="..\Fiap.Domain\Fiap.Domain.csproj" />
   </ItemGroup>
 
