Resolvendo problema do banco oracle.

--- a/src/Fiap.Data/Fiap.Data.csproj
+++ b/src/Fiap.Data/Fiap.Data.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Fiap.Domain\Fiap.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migracao\" />
+  </ItemGroup>
+
 </Project>
